# esp32-idf5-pump5-v3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/screen/: display_esp32.c  initSequence.c  initSequence.h  power_driver.cpp  power_driver.h  product_pins.h  tft_driver.h
main/storage/: app.js  index.html  style.css
main/task/: blinkTask.cpp  buttonTask.cpp  buttonTask.h  counterTask.cpp  encoderTask.cpp  encoderTask.h  screenTask.cpp  screenTask.h  telegramTask.cpp  telegramTask.h  timeTask.cpp  timeTask.h  tofTask.cpp
main/util/: config.cpp  config.h  i2c.cpp  i2c.h  main.h  pcf8575_io.cpp  pcf8575_io.h  spiffs_fs.cpp  spiffs_fs.h  telegram_config.h  telegram_manager.cpp  telegram_manager.h  utility.cpp  utility.h  web_log.cpp  web_log.h  web_server.cpp  web_server.h  wifi_config.h  wifi_manager.cpp  wifi_manager.h
tools/: ota_upload.ps1
